# agent-xi

./: .dockerignore  .env.example  .gitignore  Dockerfile  PHASE1_PLAN.md  PHASE4_PLAN.md  PHASE5_PLAN.md  README.md  docker-compose.yml  pyproject.toml
config/: default.yaml  identity.md  mcp.yaml  personality.md  prompt.md  service.md
src/agent_xi/: __init__.py  __main__.py  config.py
src/agent_xi/brain/: __init__.py  context.py  engine.py  prompt.py  tokenizer.py
src/agent_xi/cli/: __init__.py  app.py
src/agent_xi/llm/: __init__.py  base.py  claude.py  factory.py  openai_compat.py  types.py
src/agent_xi/mcp/: __init__.py  bridge.py  client.py  config.py  manager.py  protocol.py
src/agent_xi/memory/: __init__.py  embedding.py  episodic.py  manager.py  semantic.py  working.py
src/agent_xi/server/: __init__.py  __main__.py  app.py  auth.py  history_store.py  market.py  session.py  settings_api.py  uploads.py  ws_chat.py
src/agent_xi/skills/: __init__.py  matcher.py  models.py  store.py
src/agent_xi/tools/: __init__.py  base.py  registry.py
tests/: __init__.py  async_test.py  conftest.py  first_agent.py  hand.py  hello.py  steaming_test.py  test_brain.py  test_core.py  test_memory.py  test_server.py  test_uploads.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/worklets/: pixelbox.js  pixelpanel.js
web/src/: app.ts  config.ts  main.ts  router.ts  types.ts
web/src/_old_characters/: XiSprite.ts
web/src/_old_scenes/: AdminScene.ts  BootScene.ts  ChatScene.ts  MarketScene.ts
web/src/net/: api.ts  (+1 more)
(+20 files in other folders)
